fix: alignment issues

--- a/src/components/Content/Container.scss
+++ b/src/components/Content/Container.scss
@@ -9,7 +9,7 @@ ul {
         display: none;
       }
       .count {
-        padding: 10px;
+        padding: 0 10px;
         color: rgb(109, 109, 109);
       }
       .title {
